--- a/views/admin/category-edit.ejs
+++ b/views/admin/category-edit.ejs
@@ -1,238 +1,47 @@
 <%- include('../partials/adminHeader') %>
 
 <main> 
-    <form method="POST"  action="/admin/category-edit/<%= categories ? categories._id : '' %>">
-        <div class="space-y-12 p-20 flex">
-          <div class="border-b border-gray-900/10 pb-12">
-            <div class="flex-col mt-10 gap-x-6 gap-y-8 sm:grid-cols-6">
-              <div class="sm:col-span-3">
-                <label for="categoryName" class="block text-sm font-medium leading-6 text-gray-900">Product Name</label>
-                <div class="mt-2">
-                  <input value="<%= categories.categoryName %>"  type="text" name="categoryName" id="categoryName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+   
+      <section>
+        <form action="/admin/category-edit/<%= categories ? categories._id : '' %>" method="post"> 
+            <div class="min-h-screen bg-gray-100 flex items-start justify-start pl-24 pt-20">
+                <div class="w-auto">
+                  <div>
+                    <h2 class="font-semibold text-xl text-gray-600 hover:text-sky-400"></h2>
+                    <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
+                      <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
+                        <div class="text-gray-600">
+                          <p class="font-medium text-lg">Category</p>
+                        </div>
+                        <div class="lg:col-span-2">
+                          <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
+
+                            <div class="md:col-span-5">
+                              <label for="categoryName"> Category Name </label>
+                              <input type="text" name="categoryName" id="categoryName" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400" value="<%= categories.categoryName %>" />
+                            </div>
+                            <div class="md:col-span-5">
+                              <label for="description">Description </label>
+                              <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> <%= categories.description %></textarea>
+                            </div>
+                            <div class="md:col-span-5 text-right mt-5">
+                              <div class="inline-flex items-end">
+                                <button type="submit" class="bg-cyan-400 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">Submit</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-
-              <div class="sm:col-span-3 mt-12 ">
-                <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Category Description</label>
-                <div class="mt-2">
-                  <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-                </div>
-              </div>
-
-        </div>
-      
-        <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Update 
-        </button>
-        </div>
-        </div>
-      </form>
+            </form>
+    
+    </section>
   </main>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<script>
-    // start: Sidebar
-    const sidebarToggle = document.querySelector('.sidebar-toggle')
-    const sidebarOverlay = document.querySelector('.sidebar-overlay')
-    const sidebarMenu = document.querySelector('.sidebar-menu')
-    const main = document.querySelector('.main')
-    sidebarToggle.addEventListener('click', function (e) {
-        e.preventDefault()
-        main.classList.toggle('active')
-        sidebarOverlay.classList.toggle('hidden')
-        sidebarMenu.classList.toggle('-translate-x-full')
-    })
-    sidebarOverlay.addEventListener('click', function (e) {
-        e.preventDefault()
-        main.classList.add('active')
-        sidebarOverlay.classList.add('hidden')
-        sidebarMenu.classList.add('-translate-x-full')
-    })
-    document.querySelectorAll('.sidebar-dropdown-toggle').forEach(function (item) {
-        item.addEventListener('click', function (e) {
-            e.preventDefault()
-            const parent = item.closest('.group')
-            if (parent.classList.contains('selected')) {
-                parent.classList.remove('selected')
-            } else {
-                document.querySelectorAll('.sidebar-dropdown-toggle').forEach(function (i) {
-                    i.closest('.group').classList.remove('selected')
-                })
-                parent.classList.add('selected')
-            }
-        })
-    })
-    // end: Sidebar
-
-
-
-    // start: Popper
-    const popperInstance = {}
-    document.querySelectorAll('.dropdown').forEach(function (item, index) {
-        const popperId = 'popper-' + index
-        const toggle = item.querySelector('.dropdown-toggle')
-        const menu = item.querySelector('.dropdown-menu')
-        menu.dataset.popperId = popperId
-        popperInstance[popperId] = Popper.createPopper(toggle, menu, {
-            modifiers: [
-                {
-                    name: 'offset',
-                    options: {
-                        offset: [0, 8],
-                    },
-                },
-                {
-                    name: 'preventOverflow',
-                    options: {
-                        padding: 24,
-                    },
-                },
-            ],
-            placement: 'bottom-end'
-        });
-    })
-    document.addEventListener('click', function (e) {
-        const toggle = e.target.closest('.dropdown-toggle')
-        const menu = e.target.closest('.dropdown-menu')
-        if (toggle) {
-            const menuEl = toggle.closest('.dropdown').querySelector('.dropdown-menu')
-            const popperId = menuEl.dataset.popperId
-            if (menuEl.classList.contains('hidden')) {
-                hideDropdown()
-                menuEl.classList.remove('hidden')
-                showPopper(popperId)
-            } else {
-                menuEl.classList.add('hidden')
-                hidePopper(popperId)
-            }
-        } else if (!menu) {
-            hideDropdown()
-        }
-    })
-
-    function hideDropdown() {
-        document.querySelectorAll('.dropdown-menu').forEach(function (item) {
-            item.classList.add('hidden')
-        })
-    }
-    function showPopper(popperId) {
-        popperInstance[popperId].setOptions(function (options) {
-            return {
-                ...options,
-                modifiers: [
-                    ...options.modifiers,
-                    { name: 'eventListeners', enabled: true },
-                ],
-            }
-        });
-        popperInstance[popperId].update();
-    }
-    function hidePopper(popperId) {
-        popperInstance[popperId].setOptions(function (options) {
-            return {
-                ...options,
-                modifiers: [
-                    ...options.modifiers,
-                    { name: 'eventListeners', enabled: false },
-                ],
-            }
-        });
-    }
-    // end: Popper
-
-
-
-    // start: Tab
-    document.querySelectorAll('[data-tab]').forEach(function (item) {
-        item.addEventListener('click', function (e) {
-            e.preventDefault()
-            const tab = item.dataset.tab
-            const page = item.dataset.tabPage
-            const target = document.querySelector('[data-tab-for="' + tab + '"][data-page="' + page + '"]')
-            document.querySelectorAll('[data-tab="' + tab + '"]').forEach(function (i) {
-                i.classList.remove('active')
-            })
-            document.querySelectorAll('[data-tab-for="' + tab + '"]').forEach(function (i) {
-                i.classList.add('hidden')
-            })
-            item.classList.add('active')
-            target.classList.remove('hidden')
-        })
-    })
-    // end: Tab
-
-
-
-    // start: Chart
-    new Chart(document.getElementById('order-chart'), {
-        type: 'line',
-        data: {
-            labels: generateNDays(7),
-            datasets: [
-                {
-                    label: 'Active',
-                    data: generateRandomData(7),
-                    borderWidth: 1,
-                    fill: true,
-                    pointBackgroundColor: 'rgb(59, 130, 246)',
-                    borderColor: 'rgb(59, 130, 246)',
-                    backgroundColor: 'rgb(59 130 246 / .05)',
-                    tension: .2
-                },
-                {
-                    label: 'Completed',
-                    data: generateRandomData(7),
-                    borderWidth: 1,
-                    fill: true,
-                    pointBackgroundColor: 'rgb(16, 185, 129)',
-                    borderColor: 'rgb(16, 185, 129)',
-                    backgroundColor: 'rgb(16 185 129 / .05)',
-                    tension: .2
-                },
-                {
-                    label: 'Canceled',
-                    data: generateRandomData(7),
-                    borderWidth: 1,
-                    fill: true,
-                    pointBackgroundColor: 'rgb(244, 63, 94)',
-                    borderColor: 'rgb(244, 63, 94)',
-                    backgroundColor: 'rgb(244 63 94 / .05)',
-                    tension: .2
-                },
-            ]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
-
-    function generateNDays(n) {
-        const data = []
-        for(let i=0; i<n; i++) {
-            const date = new Date()
-            date.setDate(date.getDate()-i)
-            data.push(date.toLocaleString('en-US', {
-                month: 'short',
-                day: 'numeric'
-            }))
-        }
-        return data
-    }
-    function generateRandomData(n) {
-        const data = []
-        for(let i=0; i<n; i++) {
-            data.push(Math.round(Math.random() * 10))
-        }
-        return data
-    }
-    // end: Chart
-
-    
-</script>
 <%- include('../partials/adminFooter') %>
