--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -1,28 +1,14 @@
 <%- include('../partials/adminHeader') %>
 
 <main>
-<!-- 
-<section class="justify-start">
 
-   clear all of its junks -->
-<!-- <form class="mx-end w-36 h-8">
-    <select id="orderSort" class="border border-gray-300 text-blue-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-100 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
- 
-      <option value="recentlyAdded">Recently added</option>
-      <option value="delivered">Deliverd</option>
-      <option value="cancelled">Cancelled</option>
-    </select>
-  </form>
-  
-</section> -->
-
+    <!---------------- Sorting orders ---------------->
 <section class="flex justify-end items-end">
     <div class="relative">
       <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
         <span class="flex items-center font-thin">Sort items</span>
         <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
       </button>
-  
       <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
         <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
           <li>
@@ -40,85 +26,34 @@
   </section>
 
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5">
-    <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
-        <div>
-            </button>
-            <!-- Dropdown menu -->
-            <div id="dropdownAction" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownActionButton">
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
-                    </li>
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
-                    </li>
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate account</a>
-                    </li>
-                </ul>
-                <div class="py-1">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete User</a>
-                </div>
-            </div>
-        </div>
-   
-        <div class="relative">
-            <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                </svg>
-            </div>
-          </div>
-    </div>
+      <!---------------- order table ----------------->
+    <section>
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 mb-12">
         <thead class="text-xs text-gray-700 uppercase bg-orange-200  dark:text-gray-400">
             <tr>
-                <th scope="col" class="p-4">
-                 
-                </th>
-                <th scope="col" class="px-6 3">Username</th>
-                <th scope="col" class="px-6 py-3">Total</th>
-                <th scope="col" class="px-6 py-3">Payment Method</th>
-                <th scope="col" class="px-6 py-3">Status</th>
-                <th scope="col" class="px-6 py-3">Create date</th>
-                <th scope="col" class="px-6 py-3">Details</th>
+               <th scope="col" class="px-6 3">Username</th>
+               <th scope="col" class="px-6 py-3">Total</th>
+               <th scope="col" class="px-6 py-3">Payment Method</th>
+               <th scope="col" class="px-6 py-3">Status</th>
+               <th scope="col" class="px-6 py-3">Create date</th>
+               <th scope="col" class="px-6 py-3">Details</th>
             </tr>
         </thead>
         <tbody>
             <% orders.forEach(order => { %>
-            <tr class="bg-white border-b  dark:border-gray-300 hover:bg-gray-50 ">
-                <td class="w-4 p-4">
-                    
+            <tr class="bg-white  hover:bg-gray-50 ">
+                <td class="px-6 py-4">
+                    <a class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.address.name %> </a>
                 </td>
                 <td class="px-6 py-4">
-                    <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.address.name %>
-                       
-                      </a>
+                  <a class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.total %> </a>
                 </td>
                 <td class="px-6 py-4">
-                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.total %>
-                       
-                  </a>
+                  <a class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %> </a>
                 </td>
-                <td class="px-6 py-4">
-                  <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"><%= order.paymentMethod %>   
-                  </a>
-                </td>
-
-                    
-                    
-                 
-                     <!----- <a href="./orderStatus/<%= order.id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
-                         <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-                        </svg>
-                     </a>
-                 </td> -->
-
-
                  <td class="flex">
                     <p id="orderId" value="<%= order.id %>"></p>
-                    <select id="orderStatus" class="category block w-36 h-8  text-gray-500 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6 font-sans">
+                    <select id="orderStatus" class="category block w-36 h-6  text-gray-500 shadow-sm  focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6 font-sans">
                         <option selected disabled selected> <%= order.status %> </option>
                         <option value="Shipped">Shipped</option>
                         <option value="Delivered">Delivered</option>
@@ -129,11 +64,7 @@
                             change
                         </button>
                     </div>
-             
                 </td>
-                
-                
-     
                 <td class="px-6 py-4">
                   <a  class="font-medium font-sans text-xs text-gray-950  hover:underline"> <%
                     var createDate = new Date(order.createdate);
@@ -143,47 +74,40 @@
                     <p><%= date %> &nbsp;<%= time %></p>
                   </a>
                 </td>
-                <td>
+                  <td>
                     <a href="/admin/orderDetailsAdmin/<%= order.id %>">
                         <img class="h-3.5 w-3.5 ml-9" src="/images/resume.png" alt="order details">
                     </a>
-                </td>
-     
+                  </td>
             </tr>
-            <% }) %>
-    
-
+          <% }) %>
         </tbody>
     </table>
+</section>
 
-
-  
-
+  <!----------------------- pagination ----------------------->
     <section class="text-center w-full sm:w-3/4 mx-auto border-t flex justify-center py-6   ">
         <% if (currentPage > 1) { %>
             <a href="?page=<%= currentPage - 1 %>" class="px-2 font-sans hover:text-sky-600"> &lt; </a>
         <% } %>
-        
         <% for (let i = 1; i <= totalPage; i++) { %>
             <a href="?page=<%= i %>" class="px-2 font-sans hover:text-sky-600 <%= i === currentPage ? 'text-sky-600' : '' %>"> <%= i %> </a>
         <% } %>
-        
         <% if (currentPage < totalPage) { %>
             <a href="?page=<%= parseInt(currentPage) + 1 %>" class="px-2 font-sans hover:text-sky-600"> &gt; </a>
         <% } %>
     </section>
-
 </div>
-  
 </main>
+
 <script>
     function toggleDropdown() {
         var dropdown = document.getElementById('dropdown');
         dropdown.classList.toggle('hidden');
       }
 </script>
-<script>
 
+<script>
     const orderStatusChangeButtons = document.querySelectorAll('.orderStatusChangeButton');
     orderStatusChangeButtons.forEach(button => {
         button.addEventListener('click', (e) => {
@@ -218,15 +142,6 @@
     });
 });
 
-
-
-   
-
-
-
 </script>
-
-
- 
 
 <%- include('../partials/adminFooter') %>
