--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -42,7 +42,9 @@
             </thead>
             <tbody>
                 <% products.forEach(product => { %>
-                <tr class="bg-white border-b dark:border-gray-400 hover:bg-gray-50">
+     <!-------------------- enable border ------------------->
+                <!-- <tr class="bg-white border-b dark:border-gray-400 hover:bg-gray-50"> -->
+                <tr class="bg-white hover:bg-gray-50">
                     <th scope="row" class="flex items-center px-4 md:px-6 py-3 md:py-4 text-gray-900 whitespace-nowrap dark:text-white">
                         <img class="w-8 h-8 md:w-8 md:h-8" src="/product_images/<%= product.productImage[0] %>" alt="Product Image">
                         <div class="ps-3">
@@ -117,7 +119,31 @@
     </section>
     
 </main>
+<script>
+    function parseQueryParams() {
+        var queryParams = {};
+        var queryString = window.location.search.substring(1);
+        var params = queryString.split("&");
+        for (var i = 0; i < params.length; i++) {
+            var pair = params[i].split("=");
+            queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+        }
+        return queryParams;
+    }
 
+    document.addEventListener('DOMContentLoaded', function() {
+        var queryParams = parseQueryParams();
+        var message = queryParams['message'];
+        var type = queryParams['type'];
+        if (message) {
+            if (type === 'success') {
+                toastr.success(message);
+            } else if (type === 'error') {
+                toastr.error(message);
+            }
+        }
+    });
+</script>
 <script>
     function toggleDropdown() {
         var dropdown = document.getElementById('dropdown');
