--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -63,13 +63,27 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 <script>
-  var toastMessage = "<%= typeof toastMessage !== 'undefined' ? toastMessage : '' %>";
-  // Display the message using Toastr if it exists
+  function parseQueryParams() {
+      var queryParams = {};
+      var queryString = window.location.search.substring(1);
+      var params = queryString.split("&");
+      for (var i = 0; i < params.length; i++) {
+          var pair = params[i].split("=");
+          queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1])}
+      return queryParams;
+  }
+
   document.addEventListener('DOMContentLoaded', function() {
-      if (toastMessage !== '') {
-          toastr.error(toastMessage);
-      }
-  });
+      var queryParams = parseQueryParams();
+      var message = queryParams['message'];
+      var type = queryParams['type'];
+      if (message) {
+          if (type === 'success') {
+              toastr.success(message);
+          } else if (type === 'error') {
+              toastr.error(message)}
+        }
+    });
 </script>
 </body>
 </html>
