--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -62,11 +62,13 @@
         <button type="submit" class="flex w-24 justify-center bg-cyan-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign in</button>
         <!-- <a href="/forgotPassword" class="text-xs italic pl-5 font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a> -->
       </div>
+     
       <!-- googel authentication -->
       <!-- <div class="flex">
         <button type="submit" class="flex rounded-full w-11 justify-center bg-green-700 px-3 py-1.5 text-xs font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Google</button>
       </div> -->
     </form>
+    <button class="text-blue-600"><a href="/auth/google"> Google </a> </button>
 
     <p class="mt-5 text-center text-sm text-gray-500">
       Not a member?
