--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -73,6 +73,34 @@
 </main>
 
 <script>
+    function parseQueryParams() {
+        var queryParams = {};
+        var queryString = window.location.search.substring(1);
+        var params = queryString.split("&");
+        for (var i = 0; i < params.length; i++) {
+            var pair = params[i].split("=");
+            if (pair.length === 2) {
+                queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+            }
+        }
+        return queryParams;
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var queryParams = parseQueryParams();
+        var message = queryParams['message'];
+        var type = queryParams['type'];
+        if (message && type) {
+            if (type === 'success') {
+                toastr.success(message);
+            } else if (type === 'error') {
+                toastr.error(message);
+            }
+        }
+    });
+</script>
+
+<script>
     const removeCart = (itemId) => {
         const url = `http://localhost:4000/removeCart/${itemId}`;
         fetch(url, {
@@ -86,12 +114,11 @@
                 return response.json();
             })
             .then(data => {
-               
                 console.log("Item removed successfully:", data);
             })
             .catch(error => {
                 console.error('Error removing item:', error);
-            });
+          })
     };
     //------------ cart quantity change --------------
 
@@ -103,23 +130,24 @@ cartDecList.forEach(cartDec => {
         const cartId = productIdElement.value;
         const cartElement = productContainer.querySelector('.cartQty');
         const currentQty = cartElement.innerText;
+
         fetch('/cartDec',{
-                        method:"POST",
-                        headers:{
-                            "Content-Type" : "application/json"
-                        },
-                        body:JSON.stringify({
-                            cartId : cartId,
-                            currentQty : currentQty
-                        })
-                        }).then((response) => {
-                            window.location.href = '/cart'
-                            
-                           
-               }
-            )
-        
-   
+              method:"POST",
+              headers:{
+                  "Content-Type" : "application/json"
+              },
+              body:JSON.stringify({
+                  cartId : cartId,
+                  currentQty : currentQty
+              })
+              }).then(async (response) => {
+  const data = await response.json();
+    const url = `/cart?message=${data.toastMessage.text}&type=${data.toastMessage.type}`;
+    window.location.href = url
+
+}).catch((error) => {
+  console.error('Error:', error);
+});
     });
 });
 
@@ -134,22 +162,23 @@ cartDecList.forEach(cartDec => {
         const currentQty = cartElement.innerText;
 
         fetch('/cartInc',{
-                        method:"POST",
-                        headers:{
-                            "Content-Type" : "application/json"
-                        },
-                        body:JSON.stringify({
-                            cartId : cartId,
-                            currentQty : currentQty
-                        })
-                        }).then((response) => {
-                            window.location.href = '/cart'
-                           
-               }
-            )
-        
-   
-    });
+                method:"POST",
+                headers:{
+                  "Content-Type" : "application/json"
+                },
+                body:JSON.stringify({
+                    cartId : cartId,
+                    currentQty : currentQty
+                })
+                }).then(async (response) => {
+                    const res = response.toastMessage
+                    console.log('This : ',res)
+    window.location.href = `/cart?message=hellow&type=error`
+
+}).catch((error) => {
+  console.error('Error:', error);
+});
+      })
 });
 
 
