--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -63,6 +63,9 @@
                     <div class="flex gap-6 max-sm:flex-col mt-5">
                         <button id="addCoupon" type="button" class="rounded-md px-6 py-1.5 w-32 text-sm font-thin bg-cyan-400 text-gray-900 hover:bg-[#222] hover:text-white">
                         Add Coupon</button>
+                  
+                        <button id="removeCoupon" type="button" class="rounded-md px-6 py-1 w-32 text-sm font-thin bg-red-600 text-gray-900 hover:bg-[#222] hover:text-white">
+                        Remove </button>
                     </div>
                 </section>
                 <section class="mt-12 ml-96 bg-white">
@@ -151,11 +154,29 @@ const addCouponButton = document.getElementById('addCoupon');
 addCouponButton.addEventListener('click', () => {
             const subTotal = parseFloat(document.getElementById('subTotal').innerText);
             const discount = parseFloat(document.getElementById('couponValues').value);
-            const discountAmount = (subTotal * discount) / 100;
+            if(isNaN(discount)){
+                toastr.warning('Please Select a coupon');
+            }else{
+                const discountAmount = (subTotal * discount) / 100;
             const total = document.getElementById('totalPrice').innerText = subTotal - discountAmount;
             const discountDisplay = document.getElementById('discountAmount').innerText = Math.round(discountAmount);
-        }
-    );
+            toastr.success('Coupon added');
+         }
+   });
+
+    //<------------ coupon remove -------------->
+const removeCouponButton = document.getElementById('removeCoupon');
+
+removeCouponButton.addEventListener('click', () => {
+    var selectElement = document.getElementById("couponValues");
+        if(selectElement.selectedIndex > 0){
+            selectElement.selectedIndex = 0;
+        const discountDisplay = document.getElementById('discountAmount').innerText = 0+'₹';
+        toastr.success('Coupon removed');
+        }else{
+            toastr.warning('Please select a coupon');
+      }}
+  );
 
 
     //<------------ order creating -------------->
@@ -164,8 +185,10 @@ addCouponButton.addEventListener('click', () => {
     const subTotal = parseFloat(document.getElementById('subTotal').innerText)
     const placeOrderButton = document.getElementById('placeOrder');
     placeOrderButton.addEventListener('click', function() {
+        // if(No Address){
+        //     throw error
+        // }
         const paymentMethod = document.getElementsByName('paymentMethod');
-       
         let selectedValue = "";
         const totalPriceElement = document.getElementById('totalPrice');
             const totalPrice = parseFloat(totalPriceElement.textContent);
@@ -176,7 +199,7 @@ addCouponButton.addEventListener('click', () => {
             });
         if(!selectedValue){
               toastr.error('Please select a payment method');
-          }     
+        }     
         
         
    //<------------ for cash on delevery -------------->
