--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -4,7 +4,7 @@
 
 <main>
     <!-- component -->
-<div class="bg-gray-100 h-screen">
+<!-- <div class="bg-gray-100 h-screen">
     <div class="bg-white p-6  md:mx-auto">
       <svg viewBox="0 0 24 24" class="text-green-600 w-16 h-16 mx-auto my-6">
           <path fill="currentColor"
@@ -22,7 +22,35 @@
           </div>
       </div>
   </div>
+</div> -->
+
+<!-- Modal toggle -->
+<div class="flex justify-center m-5">
+    <button id="successButton" data-modal-target="successModal" data-modal-toggle="successModal" class=" text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" type="button">
+    Show success message
+    </button>
+</div>
+
+<!-- Main modal -->
+<div id="successModal" tabindex="-1" aria-hidden="true" class="justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50  mt-60 ml-96 pl-52 mb-96 pb-96 items-center w-full md:inset-0 h-modal md:h-full">
+    <div class="relative p-4 w-full max-w-md h-full md:h-auto">
+        <!-- Modal content -->
+        <div class="relative p-4 text-center bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
+            <button type="button" class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="successModal">
+                <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="w-12 h-12 rounded-full bg-green-100 dark:bg-green-600 p-2 flex items-center justify-center mx-auto mb-3.5">
+                <svg aria-hidden="true" class="w-8 h-8 text-green-500 dark:text-green-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">Success</span>
+            </div>
+            <p class="mb-4 text-lg font-semibold text-gray-900 dark:text-white">Order Created Successfully</p>
+            <a href="/orderHistory" data-modal-toggle="successModal" type="a href="/orderHistory"" class="font-bold py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
+                Order Histroy
+            </a>
+        </div>
+    </div>
 </div>
 </main>
 
-<%- include('../partials/footer') %>
+
