--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -52,11 +52,15 @@
                           </tr>
                       </tbody>
                   </table>
+                  <button class="mt-8 bg-sky-500 text-gray-900 text-xs border-2 rounded-xl border-gray-900">Add money</button>
               </div>
           </div>
       </div>
   </div>
 </section>
+<ssection>
+  
+</ssection>
 </main>
 
 <%- include('../partials/footer') %>
