--- a/views/user/orderDetailsUser.ejs
+++ b/views/user/orderDetailsUser.ejs
@@ -50,7 +50,7 @@
                         </div>
                         <% }else{ %>
                         <div class="total flex items-center justify-between pt-6">
-                            <button id="cancelOrderUser" class="font-normal text-xl leading-8 text-black" value="<%= order.id %>">Cancel</button>
+                            <button id="cancelOrderUser" class="font-normal text-xl leading-8 text-black bg-red-600" value="<%= order.id %>">Cancel</button>
                         </div>
                         <% } %>
                     </div>
