--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -3,14 +3,19 @@
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
+<style>
+  body {
+    overflow-x: hidden;
+  }
+</style>
 <main>
 
-<section class="py-1 bg-blueGray-50 ">
-<div class="w-full mb-12 xl:mb-0 px-2 mt-16">
+<section class="py-1 bg-blueGray-50">
+<div class="w-5/6 mb-12 xl:mb-0 px-1 mt-16">
   <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
-    <div class="rounded-t mb-0 px-4 border-0">
+    <div class="rounded-t mb-0 px-1 border-0">
       <div class="flex flex-wrap items-center">
-        <div class="relative w-full px-4 max-w-full flex-grow flex-1">
+        <div class="relative  px-1 flex-grow flex-1">
           <h3 class="font-semibold text-base text-blueGray-700">    </h3>
         </div>
       </div>
@@ -34,28 +39,40 @@
           <th class=" bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
              Expiry Date
             </th>
+          <th class=" bg-violet-600 text-white align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+             Delete
+            </th>
           </tr>
         </thead>
 
         <tbody>
             <% coupon.forEach(coup => { %>
           <tr>
-            <th class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left text-blueGray-700 ">
+            <th class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3 text-left text-blueGray-700 ">
                  <%= coup.couponCode %>
             </th>
-            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 ">
+            <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3 ">
                  <%= coup.description %>
             </td>
-            <td class="border-t-0 px-6 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+            <td class="border-t-0 px-2 align-center border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
                  <%= coup.discount %>
             </td>
-            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+            <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
+              <i class="mr-4"></i>
                <%= coup.minimumAmount %>
             </td>
-            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
-               <%= coup.expiryDate %>
+            <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
+              <i class="mr-4"></i>
+              <% const expiryDate = new Date(coup.expiryDate);
+                  const day = expiryDate.getDate();
+                  const month = expiryDate.getMonth() + 1; 
+                  const year = expiryDate.getFullYear();
+                  const formattedDate = `${day}-${month}-${year}`;%>
+              <%= formattedDate %>
+          </td>
+            <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
+              <i class="mr-4"></i>
+               Del
             </td>
           </tr>
         <% }) %>
