--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -110,7 +110,7 @@ initTWE({ Dropdown, Ripple });
                   <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
                   <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
                   <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
-                  <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Logout</a>
+                  <a href="/logout" class="text-gray-800 hover:text-red-500 px-3 py-2 text-xs my-5 font-thin">Logout</a>
                 </div>
               </div>
           <!-- Profile dropdown -->
