Admin managment UI changed

--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -25,13 +25,13 @@
         <thead>
             
           <tr>
-            <th class=" bg-blueGray-200 pl-5 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-pink-500 pl-5 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Name</th>
-            <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-pink-500 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Description</th>
-          <th class=" bg-blueGray-200 text-blueGray-500  border border-solid border-blueGray-100 py-3 pr-20  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+          <th class=" bg-pink-500 text-blueGray-500  border border-solid border-blueGray-100 py-3 pr-20  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
                           Edit</th>
-          <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 pr-20 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+          <th class=" bg-pink-500 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 pr-20 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                           Delete</th>
         
          
@@ -78,7 +78,7 @@
 
       </table>
       <section class="mb-14 mt-10">
-        <a href="./category-add" type="submit" class="flex w-32 rounded-md bg-pink-300 px-3 py-1.5 text-sm font-semibold leading-6 text-gray-700 shadow-sm hover:bg-yellow-500 hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Category</a>
+        <a href="./category-add" type="submit" class="flex w-32 rounded-md bg-pink-500 px-3 py-1.5 text-sm font-semibold leading-6 text-gray-700 shadow-sm hover:bg-yellow-500 hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Category</a>
 
     </section>
     </div>
