--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -83,7 +83,7 @@
   </div>
 </div>
 <div class=" flex-grow flex-1 text-left">
-  <a href="/admin/coupon-add" class="bg-indigo-500 text-white active:bg-indigo-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">Add Coupon</a>
+  <a href="/admin/coupon-add" class="bg-violet-600 text-white active:bg-indigo-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">Add Coupon</a>
 </div>
 
 </section>
