--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -5,8 +5,8 @@
     <!---------------- Sorting orders ---------------->
 <section class="flex justify-end items-end">
     <div class="relative">
-      <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
-        <span class="flex items-center font-thin">Sort items</span>
+      <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="mt-12 text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
+        <span class="flex items-center font-thin">Sort By</span>
         <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
       </button>
       <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
@@ -25,11 +25,11 @@
     </div>
   </section>
 
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5">
+  <div class="relative overflow-x-auto shadow-md mt-5">
       <!---------------- order table ----------------->
     <section>
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 mb-12">
-        <thead class="text-xs text-gray-700 uppercase bg-orange-200  dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-yellow-500  dark:text-gray-400">
             <tr>
                <th scope="col" class="px-6 3">Username</th>
                <th scope="col" class="px-6 py-3">Total</th>
@@ -60,7 +60,7 @@
                         <option value="Cancelled">Cancelled</option>
                     </select>
                     <div>
-                        <button class="orderStatusChangeButton ml-4 text-green-400">
+                        <button class="orderStatusChangeButton ml-4 text-green-600">
                             change
                         </button>
                     </div>
